# RAG-Kudo

./: .chainlit.toml  .env.example  .gitignore  EVALUATION.md  FEATURES.md  QUICKSTART.md  README.md  chainlit.md  pyproject.toml
app/: chainlit_app.py
config/: __init__.py  settings.py
data/evaluation/: test_dataset.json
scripts/: analyze_results.py  check_gpu.py  demo.py  pipeline.py  run_chainlit.sh  run_evaluation.py
src/: __init__.py
src/evaluation/: __init__.py  ragas_evaluator.py
src/generation/: __init__.py  llm_manager.py  response_generator.py
src/ingestion/: __init__.py  chunker.py  chunker_local.py  docling_multilang_processor.py  docling_processor.py
src/observability/: __init__.py  langfuse_manager.py
src/retrieval/: __init__.py  query_reformulator.py  reranker.py  retriever.py  vector_store.py
src/utils/: __init__.py  embeddings.py  gpu_utils.py  validation.py
tests/: test_response_generator.py  test_validation.py
